@@ -4,11 +4,14 @@ requires 'File::Find::Rule';
 requires 'File::Slurp';
 requires 'File::Temp';
 requires 'Getopt::Long::Subcommand';
+requires 'IPC::System::Simple';
 requires 'Import::Into';
 requires 'JSON';
 requires 'Plack::Builder';
 requires 'Plack::Runner';
 requires 'Pod::Usage';
+requires 'Syntax::Kamelon';
+requires 'Syntax::Kamelon::Indexer';
 requires 'Test::More';
 requires 'Text::FrontMatter::YAML';
 requires 'Text::MultiMarkdown';
