@@ -2,6 +2,9 @@ Revision history for Perl extension App-unbelievable
 
 {{$NEXT}}
 
+    - Add syntax-highlighted fenced code blocks using Syntax::Kamelon
+    - Add dependency on IPC::System::Simple to hopefully fix test failures
+
 v0.0.2 2020-01-30T02:19:51Z (TRIAL RELEASE)
 
     - Add `serve`; update `build` accordingly.
